[workspace]
resolver = "3"
members = ["yaks-core", "yaks-tui"]

[workspace.dependencies]
anyhow = "1.0.98"
async-channel = "2.5.0"
async-stream = "0.3.6"
clap = { version = "4.5.42", features = ["derive"] }
derive_more = { version = "2", features = ["display", "deref"] }
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = { version = "0.17", features = ["in_memory"] }
log = "0.4.27"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.14.0", features = ["json"] }
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }
thiserror = "2.0.12"
ustr = { version = "1.1.0", features = ["serde"] }

