[package]
name = "yaks-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel.workspace = true
async-stream.workspace = true
anyhow.workspace = true
bytes.workspace = true
derive_more.workspace = true
dirs-next.workspace = true
futures.workspace = true
htmd.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
ustr.workspace = true
yaks-common.path = "../yaks-common"
