[package]
name = "yaks-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "yaks"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs-next.workspace = true
indicatif.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
tokio.workspace = true
yaks-core.path = "../yaks-core"
