[package]
name = "yaks-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs-next.workspace = true
indicatif.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
tokio.workspace = true
yaks-common.path = "../yaks-common"
yaks-core.path = "../yaks-core"
